feat: test some classes and improvements